[gd_scene load_steps=7 format=3 uid="uid://p45rkvj3wjno"]

[ext_resource type="Script" path="res://Scripts/UI/HudItems.gd" id="1_1ir2i"]
[ext_resource type="Texture2D" uid="uid://b1ywrdivtg7sw" path="res://Assets/platformer_metroidvania asset pack v1.01/hud elements/hearts_hud.png" id="2_x13lv"]
[ext_resource type="Texture2D" uid="uid://16o0f60ya2m5" path="res://Assets/platformer_metroidvania asset pack v1.01/hud elements/no_hearts_hud.png" id="3_dif40"]
[ext_resource type="Texture2D" uid="uid://dg2fr52dnuttq" path="res://Assets/platformer_metroidvania asset pack v1.01/hud elements/lifes_icon.png" id="4_goipv"]
[ext_resource type="Texture2D" uid="uid://c6av0pwrvopa8" path="res://Assets/pngegg.png" id="5_83qbe"]
[ext_resource type="PackedScene" uid="uid://bta2e4rm6f1i3" path="res://Scenes/pause_menu.tscn" id="6_p7qwy"]

[node name="HudItems" type="Control"]
process_mode = 3
process_priority = 1
layout_mode = 3
anchor_left = -0.0173611
anchor_top = -0.0308642
anchor_right = 0.414063
anchor_bottom = 0.407407
offset_left = 20.0
offset_top = 20.0
offset_right = 99.0
offset_bottom = 60.0
scale = Vector2(2, 2)
script = ExtResource("1_1ir2i")
full_heart_texture = ExtResource("2_x13lv")
empty_heart_texture = ExtResource("3_dif40")
metadata/_edit_use_anchors_ = true

[node name="LifesIcon" type="Sprite2D" parent="."]
position = Vector2(11, 10)
texture = ExtResource("4_goipv")

[node name="HeartContainer" type="Control" parent="."]
anchors_preset = 0

[node name="HeartsHud" type="TextureRect" parent="HeartContainer"]
layout_mode = 0
offset_left = 23.0
offset_top = 1.5
offset_right = 39.0
offset_bottom = 17.5
texture = ExtResource("2_x13lv")

[node name="HeartsHud2" type="TextureRect" parent="HeartContainer"]
layout_mode = 0
offset_left = 39.5
offset_top = 1.5
offset_right = 55.5
offset_bottom = 17.5
texture = ExtResource("2_x13lv")

[node name="HeartsHud3" type="TextureRect" parent="HeartContainer"]
layout_mode = 0
offset_left = 56.5
offset_top = 1.5
offset_right = 72.5
offset_bottom = 17.5
texture = ExtResource("2_x13lv")

[node name="PauseButton" type="TextureButton" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -39.0
offset_top = 1.5
offset_right = 473.0
offset_bottom = 513.5
grow_horizontal = 0
scale = Vector2(0.08, 0.08)
action_mode = 0
texture_normal = ExtResource("5_83qbe")

[node name="PauseMenu" parent="." instance=ExtResource("6_p7qwy")]
visible = false
z_index = 3
layout_mode = 1
scale = Vector2(0.5, 0.5)

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
